daladevelop/assets/css/main.css
/*! sanitize.css | CC0 Public Domain | github.com/jonathantneal/sanitize.css */
/*
 * Normalization
 */
:root {
  -ms-overflow-style: -ms-autohiding-scrollbar;
  overflow-y: scroll;
  -webkit-text-size-adjust: 100%;
      -ms-text-size-adjust: 100%;
          text-size-adjust: 100%; }

audio:not([controls]) {
  display: none; }

details {
  display: block; }

input[type="number"] {
  width: auto; }

input[type="search"] {
  -webkit-appearance: textfield; }
  input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
    -webkit-appearance: none; }

main {
  display: block; }

summary {
  display: block; }

pre {
  overflow: auto; }

progress {
  display: inline-block; }

small {
  font-size: 75%; }

template {
  display: none; }

textarea {
  overflow: auto; }

[hidden] {
  display: none; }

[unselectable] {
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none; }

/*
 * Universal inheritance
 */
*,
::before,
::after {
  box-sizing: inherit; }

* {
  font-size: inherit;
  line-height: inherit; }

::before,
::after {
  text-decoration: inherit;
  vertical-align: inherit; }

/*
 * Opinionated defaults
 */
*,
::before,
::after {
  border-style: solid;
  border-width: 0; }

* {
  margin: 0;
  padding: 0; }

:root {
  box-sizing: border-box;
  cursor: default;
  font: 14px / 1.28571 "Open Sans", Arial, Helvetica, sans-serif;
  text-rendering: optimizeLegibility; }

html {
  background-color: #03080b; }

a {
  text-decoration: none; }

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle; }

button,
input,
select,
textarea {
  background-color: transparent; }

button,
input,
select,
textarea {
  color: inherit;
  font-family: inherit;
  font-style: inherit;
  font-weight: inherit; }

button,
[type="button"],
[type="date"],
[type="datetime"],
[type="datetime-local"],
[type="email"],
[type="month"],
[type="number"],
[type="password"],
[type="reset"],
[type="search"],
[type="submit"],
[type="tel"],
[type="text"],
[type="time"],
[type="url"],
[type="week"],
select,
textarea {
  min-height: 1.28571em; }

code,
kbd,
pre,
samp {
  font-family: monospace, monospace; }

nav ol,
nav ul {
  list-style: none; }

select {
  -moz-appearance: none;
  -webkit-appearance: none; }
  select::-ms-expand {
    display: none; }
  select::-ms-value {
    color: currentColor; }

table {
  border-collapse: collapse;
  border-spacing: 0; }

textarea {
  resize: vertical; }

::-moz-selection {
  background-color: #B3D4FC;
  text-shadow: none; }

::selection {
  background-color: #B3D4FC;
  text-shadow: none; }

@media screen {
  [hidden~="screen"] {
    display: inherit; }
  [hidden~="screen"]:not(:active):not(:focus):not(:target) {
    clip: rect(0 0 0 0) !important;
    position: absolute !important; } }

body {
  background-color: #07141a;
  color: #fff;
  font-weight: 100; }

p {
  margin: 1.5em 0; }

a {
  color: #3ae8c9;
  text-decoration: underline;
  -webkit-transition: color 0.1s, background-color 0.2s;
          transition: color 0.1s, background-color 0.2s; }

h1,
.alpha {
  font-size: 46px; }

h2,
.beta {
  font-size: 32px; }

h3,
.gamma {
  font-size: 26px; }

h4,
.delta {
  font-size: 21px; }

h5,
.epsilon {
  font-size: 18px; }

h6,
.zeta {
  font-size: 14px;
  text-transform: uppercase;
  letter-spacing: 0.2em; }

h1, h2, h3, h4, h5, h6 {
  margin: 1em 0 .56em;
  line-height: 1;
  font-style: italic; }
  h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
    color: inherit;
    text-decoration: none; }
  h1 + p,
  h1 + form,
  h1 + ul,
  h1 + ol, h2 + p,
  h2 + form,
  h2 + ul,
  h2 + ol, h3 + p,
  h3 + form,
  h3 + ul,
  h3 + ol, h4 + p,
  h4 + form,
  h4 + ul,
  h4 + ol, h5 + p,
  h5 + form,
  h5 + ul,
  h5 + ol, h6 + p,
  h6 + form,
  h6 + ul,
  h6 + ol {
    margin-top: 0; }
  h1 + img, h2 + img, h3 + img, h4 + img, h5 + img, h6 + img {
    margin-top: 1em; }

.left {
  float: left; }

.right {
  float: right; }

.center {
  margin-left: auto;
  margin-right: auto; }

.text-left {
  text-align: left; }

.text-right {
  text-align: right; }

.text-center {
  text-align: center; }

.cover {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  text-decoration: none; }

.nav li {
  display: inline; }
  .nav li a {
    display: inline-block; }

.hide-text {
  overflow: hidden;
  text-indent: 100%;
  white-space: nowrap; }

.clearfix {
  *zoom: 1; }
  .clearfix:before, .clearfix:after {
    content: '';
    display: table; }
  .clearfix:after {
    clear: both; }

html,
body {
  height: 100%; }

body {
  width: 100%;
  overflow-x: hidden; }

img {
  max-width: 100%;
  height: auto; }

table {
  width: 100%; }

.read-more-link {
  font-size: .857142857rem;
  font-weight: bold;
  text-decoration: none; }

/* Off-Canvas Navigation */
.container {
  width: 100%;
  min-height: 100%;
  position: relative;
  padding: 0 2rem;
  -webkit-transition: margin-left .2s;
          transition: margin-left .2s; }
  .offcanvas .container {
    margin-left: -315px; }

.offcanvas-area {
  width: 315px;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 100%; }

.section-latest-posts {
  margin-top: 6rem; }
  .single .section-latest-posts {
    padding-top: 2rem;
    border-top: 1px solid #0c222c; }

.wrapper {
  max-width: 1140px;
  margin: 0 auto; }

.grids {
  overflow: hidden;
  clear: both;
  margin-left: -2em; }
  .grids > * {
    width: 100%;
    float: left;
    margin-bottom: 2em;
    padding-left: 2em; }
    .grids > * *:first-child {
      margin-top: 0; }

.half-gutter {
  margin-left: -1em; }
  .half-gutter > * {
    padding-left: 1em; }

::-webkit-input-placeholder {
  color: #fff; }

:-moz-placeholder {
  color: #fff;
  opacity: 1; }

::-moz-placeholder {
  color: #fff;
  opacity: 1; }

:-ms-input-placeholder {
  color: #fff; }

label {
  display: block;
  margin-bottom: .5rem;
  font-weight: bold; }
/* ... */

